--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ logs/
 qdrant_storage/
 .qdrant/
 
-# PDF and document files (if you don't want to commit them)
+# PDF and document files
 *.pdf
 docs/
 uploads/
@@ -93,16 +93,3 @@ cython_debug/
 *.tmp
 *.temp
 .cache/
-
-# Node / React
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-frontend/build/
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-.npm
-.eslintcache
