--- a/railway.toml
+++ b/railway.toml
@@ -3,5 +3,14 @@ app = "your-app-name"
 build = "pip install -r requirements.txt"
 start = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 
+[build]
+builder = "NIXPACKS"
+
+[deploy]
+startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
+
 [env]
 PORT = "8000"
+PYTHON_VERSION = "3.12"
