--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-uvicorn
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+inngest==0.4.8
+openai==1.55.3
+qdrant-client==1.12.1
+pymupdf==1.24.13
+python-dotenv==1.0.1
+pydantic==2.10.3
+python-multipart==0.0.20
