--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ pymupdf==1.24.13
 python-dotenv==1.0.1
 pydantic==2.10.3
 python-multipart==0.0.20
+llama-index==0.9.48
+llama-index-readers-file==0.1.6
