--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.2",
+    "fitz>=0.0.1.dev2",
     "inngest>=0.5.12",
     "llama-index-core>=0.14.8",
     "llama-index-readers-file>=0.5.4",
     "openai>=2.8.0",
+    "pymupdf>=1.26.6",
     "python-dotenv>=1.2.1",
     "qdrant-client>=1.15.1",
     "streamlit>=1.51.0",
